# Forest

./: .gitignore  ClassStructure.xmind  classdiagram.vsdx
cppForest/: 1.csv  2.csv  CMakeLists.txt  Garbage_Bin.cpp  Garbage_Bin.h  library.h  main.cpp  main.s
cppForest/Data/: DataFrame.cpp  DataFrame.h  FinalData.cpp  FinalData.h
cppForest/Data/_entry/: _entry.cpp  _entry.h
cppForest/Function/: Function.cpp  Function.h
cppForest/Function/Functions/: AffineFunction.cpp  AffineFunction.h
cppForest/Function/Variable/: Range.cpp  Range.h  Variable.cpp  Variable.h  var.cpp  var.h
cppForest/Matrix/: _cnst_mat.cpp  _cnst_mat.h  _gaussian_elimination.c  _gaussian_elimination.h  _unit_mat.cpp  _unit_mat.h
cppForest/Matrix/_cnst_mat/: _cnst_mat.cpp  _cnst_mat.h  _cnst_vec.cpp  _cnst_vec.h
cppForest/Matrix/_col_mat/: _col_mat.cpp  _col_mat.h  _num_mat.cpp  _num_mat.h
cppForest/Matrix/_entry/: _entry.cpp  _entry.h
cppForest/Matrix/_matrix/: _matrix.cpp  _matrix.h
cppForest/MetaLang/: DOMNode.cpp  DOMNode.h  DOMTree.cpp  DOMTree.h  MLParser.cpp  MLParser.h
cppForest/Model/: Model.cpp  Model.h
cppForest/Model/LinearModel/: L2Linear.cpp  L2Linear.h
cppForest/MyException/: nullException.cpp  nullException.h
cppForest/Solvers/: Range.cpp  Range.h  Solver.cpp  Solver.h  SolverInfo.cpp  SolverInfo.h  SolverInput.cpp  SolverInput.h  SolverOutput.cpp  SolverOutput.h
cppForest/Solvers/Root/: RootFinder.h  (+1 more)
cppForest/cg/: _cg.cpp  _cg.h  _dcg.cpp  _dcg.h  cg.cpp  cg.h  dcg.cpp  dcg.h
cppForest/cgNode/: _cg_node.cpp  _cg_node.h  _root_node.cpp  _root_node.h  _var.cpp  _var.h  addNode.cpp  addNode.h  cgNode.cpp  cgNode.h  constNode.cpp  constNode.h  divNode.cpp  divNode.h  expNode.cpp  expNode.h  mulNode.cpp  mulNode.h  numericNode.cpp  numericNode.h  rootNode.cpp  rootNode.h  subNode.cpp  subNode.h  var.cpp  var.h  varNode.cpp  varNode.h  vecNode.cpp  vecNode.h
cppForest/common/: _bit_array.cpp  _bit_array.h  common.cpp  common.h
(+317 files in other folders)
